# deepfake_detection

./: .gitignore  config.toml  driver.py  pyproject.toml
deepfake_detection/: data_utils.py  train_meso4.py  train_model.py  utils.py
deepfake_detection/models/: MESO4.py  MESO_INCEPTION4.py
deepfake_detection/trained_models/meso4/: 0_meso4.pkl  1_meso4.pkl  meso4.pkl
misc/extract_faces_from_videos/: extract_faces_from_videos.py  extract_frames_from_videos.py  face_extraction_utils.py  main.py
