[tool.poetry]
name = "deepfake_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
torch = "^1.9.1"
torchvision = "^0.10.1"
face-recognition = "^1.3.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
spyder = "^5.1.5"
gpustat = "^0.6.0"
black = "^21.9b0"
pytest = "^6.2.5"
coverage = "^6.0"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
